Fix Footer Z-index

--- a/site/src/components/assets/scss/common/footer/_footer.scss
+++ b/site/src/components/assets/scss/common/footer/_footer.scss
@@ -10,7 +10,7 @@
         left: $margins-desktop * -1;
         padding: 0 $margins-desktop;
         border-top: $border;
-        z-index: 9;   
+        z-index: 99;   
 
         @include font-size-16();
 
